update dot's color

--- a/liquid-prep-app/src/app/components/slide-indicator/slide-indicator.component.scss
+++ b/liquid-prep-app/src/app/components/slide-indicator/slide-indicator.component.scss
@@ -22,15 +22,15 @@
   .active {
     width: 8px;
     height: 8px;
-    margin: 1px;
-    background-color: dodgerblue;
+    margin: 5px;
+    background-color: #000000;
   }
 
   .inactive {
     width: 8px;
     height: 8px;
-    margin: 1px;
-    background-color: lightgrey;
+    margin: 5px;
+    background-color: #cccccc;
   }
 
   .small {
