update measure guid text

--- a/liquid-prep-app/src/app/components/measure-soil/measure-soil.component.html
+++ b/liquid-prep-app/src/app/components/measure-soil/measure-soil.component.html
@@ -18,7 +18,7 @@
           <div class="swiper-slide">
             <div class="container" fxLayout="column" fxFlexFill fxLayoutAlign="end center" >
               <div class="container text-area" fxLayout="column" fxFlexWrap fxLayoutAlign="start center" >
-                <p class="title" >Step 1:</p>
+                <p class="title" >Step 1</p>
                 <p class="description">Get your sensor Ready</p>
               </div>
               <img mat-card-image class="cardImg" src="../../../assets/measure-guide/graphic-1.png" alt="Step 1:">
@@ -28,8 +28,8 @@
           <div class="swiper-slide">
             <div class="container" fxLayout="column" fxFlexFill fxLayoutAlign="end center" >
               <div class="container text-area"  fxLayout="column" fxFlexWrap fxLayoutAlign="start center" >
-                <p class="title" textWrap="true">Step 2:</p>
-                <label class="description">Insert the sensor at least 15cm deep</label>
+                <p class="title" textWrap="true">Step 2</p>
+                <label class="description">Insert the sensor at least 15 cm deep</label>
               </div>
               <img mat-card-image class="cardImg" src="../../../assets/measure-guide/graphic-2.png" alt="Step 2:">
             </div>
@@ -38,7 +38,7 @@
           <div class="swiper-slide">
             <div class="container" fxLayout="column" fxFlexFill fxLayoutAlign="end center" >
               <div class="container text-area sensor-text" fxLayout="column" fxFlexWrap fxLayoutAlign="start center">
-                <p class="title" textWrap="true">Step 3:</p>
+                <p class="title" textWrap="true">Step 3</p>
                 <p class="description" flex textWrap="false">Connect to Sensor</p>
                 <button mat-flat-button class="c-btn" (click)="onSensorConnect('usb')"><mat-icon>usb</mat-icon> Connect with USB</button>
                 <button mat-flat-button class="c-btn" (click)="onSensorConnect('ble')"><mat-icon>bluetooth</mat-icon> Connect with Bluetooth </button>
