--- a/liquid-prep-app/src/app/components/measure-soil/measure-soil.component.scss
+++ b/liquid-prep-app/src/app/components/measure-soil/measure-soil.component.scss
@@ -34,20 +34,20 @@
 }
 
 .title {
-  color: black;
-  font-size: 16px;
+  color: #cccccc;
+  font-size: 18px;
   margin-top: 30px;
   margin-bottom: 5px;
 }
 
 .description {
-  color: gray;
-  font-size: 14px;
+  color: #666666;
+  font-size: 18px;
   margin-top: 5px;
   margin-bottom: 10px;
   text-align: center;
   width:240px;
-  word-break: break-all;
+  word-break: normal;
   white-space: normal;
 }
 
