--- a/liquid-prep-app/src/app/components/measure-soil/measure-soil.component.html
+++ b/liquid-prep-app/src/app/components/measure-soil/measure-soil.component.html
@@ -1,107 +1,246 @@
+<mat-toolbar class="custom-toolbar">
+  <button
+    mat-icon-button
+    class="white-icon"
+    aria-label="back clicked"
+    (click)="backClicked()"
+  >
+    <mat-icon class="volume-icon">arrow_back</mat-icon>
+  </button>
+  <span class="toolbar-title">Measure Soil Moisture</span>
+  <span class="toolbar-spacer"></span>
+  <button
+    mat-icon-button
+    class="white-icon"
+    aria-label="read text"
+    (click)="volumeClicked()"
+  >
+    <mat-icon>volume_up</mat-icon>
+  </button>
+</mat-toolbar>
 
-  <mat-toolbar class="custom-toolbar">
-    <button mat-icon-button class="white-icon" aria-label="back clicked" (click)="backClicked()">
-      <mat-icon class="volume-icon">arrow_back</mat-icon>
-    </button>
-    <span class="toolbar-title">Measure Soil Moisture</span>
-    <span class="toolbar-spacer"></span>
-    <button mat-icon-button class="white-icon" aria-label="read text" (click)="volumeClicked()">
-      <mat-icon>volume_up</mat-icon>
-    </button>
-  </mat-toolbar>
-
-  <div *ngIf="measureView=='before-measuring'" class="content-container" >
-    <swiper *ngIf="measureView=='before-measuring'" #swiper class="swiper-container" [config]="config" [(index)]="curIndex" [disabled]="disabled"
-            (indexChange)="onIndexChange($event)" (swiperTransitionStart)="onSwiperEvent('transitionStart')"
-            (swiperTransitionEnd)="onSwiperEvent('transitionEnd')">
-
-          <div class="swiper-slide">
-            <div class="container" fxLayout="column" fxFlexFill fxLayoutAlign="end center" >
-              <div class="container text-area" fxLayout="column" fxFlexWrap fxLayoutAlign="start center" >
-                <p class="title" >Loosen the soil</p>
-                <p class="description">Using a shovel, auger, or sample drill, loosen the soil.</p>
-              </div>
-              <img mat-card-image class="cardImg" src="../../../assets/measure-guide/step-1-loosen-the-soil.png" alt="Step 1:">
-            </div>
-          </div>
-
-          <div class="swiper-slide">
-            <div class="container" fxLayout="column" fxFlexFill fxLayoutAlign="end center" >
-              <div class="container text-area"  fxLayout="column" fxFlexWrap fxLayoutAlign="start center" >
-                <p class="title" textWrap="true">Insert the sensor</p>
-                <p class="description">Make sure sensor is under the soil {{stage.rootDepth}} {{crop.cropGrowthStage.rootDepthMetric}}</p>
-              </div>
-              <img mat-card-image class="cardImg" src="../../../assets/measure-guide/step-2-insert-the-sensor.png" alt="Step 2:">
-            </div>
-          </div>
-
-          <div class="swiper-slide">
-            <div class="container" fxLayout="column" fxFlexFill fxLayoutAlign="end center" >
-              <div class="container text-area sensor-text" fxLayout="column" fxFlexWrap fxLayoutAlign="start center">
-                <p class="description" flex textWrap="false">Connect to Sensor</p>
-                <p class="description"></p>
-                <button mat-flat-button class="c-btn" (click)="onSensorConnect('usb')"><mat-icon>usb</mat-icon> Connect with USB</button>
-                <button mat-flat-button class="c-btn" (click)="onSensorConnect('ble')"><mat-icon>bluetooth</mat-icon> Connect with Bluetooth </button>
-              </div>
-              <img mat-card-image class="cardImg" src="../../../assets/measure-guide/step-3-connect-the-sensor.png" alt="Connect to Sensor" />
-            </div>
-          </div>
-    </swiper>
-  </div>
-
-  <div *ngIf="measureView=='after-measuring' || measureView=='measuring'"
-       fxLayout="column"
-       fxLayoutAlign="none center">
-
-      <div fxFlex="30" class="spin-margin-padding" >
-        <mat-progress-spinner class="custom-spinner-sk" [mode]="measureView=='after-measuring'? 'determinate':'indeterminate'" diameter="150" strokeWidth="8" value=43 style="position:relative; top: 150px;z-index: 10;">
-        </mat-progress-spinner>
-        <mat-progress-spinner class="custom-spinner-bg" mode="determinate" diameter="150" strokeWidth="8" value=100>
-        </mat-progress-spinner>
-      </div>
-
+<div *ngIf="measureView == 'before-measuring'" class="content-container">
+  <swiper
+    *ngIf="measureView == 'before-measuring'"
+    #swiper
+    class="swiper-container"
+    [config]="config"
+    [(index)]="curIndex"
+    [disabled]="disabled"
+    (indexChange)="onIndexChange($event)"
+    (swiperTransitionStart)="onSwiperEvent('transitionStart')"
+    (swiperTransitionEnd)="onSwiperEvent('transitionEnd')"
+  >
+    <div class="swiper-slide">
       <div
-        fxFlexFill
+        class="container"
         fxLayout="column"
-        fxLayoutAlign="space-between center"
-        fxLayoutGap="10px"
-        class="measure-btn-margin-padding">
-        <div fxFlexFill fxLayout="row" fxLayoutAlign="center center">
-          <button [disabled]="measureView=='after-measuring'? false:true" fxFlex="70" mat-flat-button color="primary" (click)="onMeasure()">MEASURE AGAIN</button>
-        </div>
-        <div fxFlexFill fxLayout="row" fxLayoutAlign="center center">
-          <button [disabled]="measureView=='after-measuring'? false:true" fxFlex="70" mat-stroked-button color="primary" (click)="onGetAdvise()">GET ADVICE</button>
-        </div>
-      </div>
-      <div
         fxFlexFill
-        fxLayout="column"
-        fxLayoutAlign="space-between center"
-        fxLayoutGap="4px"
-        style="position:relative; top: -220px;z-index: 12;">
-          <label *ngIf="measureView=='after-measuring'" fxFlex="10" class="mat-h5">SOIL MOISTURE</label>
-          <p *ngIf="measureView=='after-measuring'" fxFlex="10" class="mat-display-1" >{{soilData.soilMoisturePercentage}}%</p>
-          <p *ngIf="measureView=='measuring'" class="mat-h1">{{countdownSecond}}</p>
-          <p *ngIf="measureView=='measuring'">Reading...</p>
+        fxLayoutAlign="end center"
+      >
+        <div
+          class="container text-area"
+          fxLayout="column"
+          fxFlexWrap
+          fxLayoutAlign="start center"
+        >
+          <p class="title">Loosen the soil</p>
+          <p class="description">
+            Using a shovel, auger, or sample drill, loosen the soil.
+          </p>
+        </div>
+        <img
+          mat-card-image
+          class="cardImg"
+          src="../../../assets/measure-guide/step-1-loosen-the-soil.png"
+          alt="Step 1:"
+        />
       </div>
-
-  </div>
-
-  <mat-toolbar *ngIf="measureView=='before-measuring'" class="toolbarNav">
-
-    <div class="container" fxLayout="row" fxFlexFill fxLayoutAlign="space-between center" >
-
-        <button [ngClass]="{'invisible': isFirstSlide}" mat-icon-button style="margin-right: 24px">
-          <mat-icon class="blue-icon" (click)="onSlideNav('back')">navigate_before</mat-icon>
-          <span Class="tool-bar-text" (click)="onSlideNav('back')">BACK  </span>
-        </button>
-
-        <app-slide-indicator [current]="curIndex" [length]="3"></app-slide-indicator>
-
-        <button [ngClass]="{'invisible': isLastSlide}" mat-icon-button style="margin-right: 24px">
-          <span Class="tool-bar-text" (click)="onSlideNav('next')">NEXT</span>
-          <mat-icon class="blue-icon" (click)="onSlideNav('next')">navigate_next</mat-icon>
-        </button>
-
     </div>
-  </mat-toolbar>
+
+    <div class="swiper-slide">
+      <div
+        class="container"
+        fxLayout="column"
+        fxFlexFill
+        fxLayoutAlign="end center"
+      >
+        <div
+          class="container text-area"
+          fxLayout="column"
+          fxFlexWrap
+          fxLayoutAlign="start center"
+        >
+          <p class="title" textWrap="true">Insert the sensor</p>
+          <p class="description">
+            Make sure to insert the sensor in the soil upto
+            {{ stage.rootDepth }}
+            {{ crop.cropGrowthStage.rootDepthMetric }} deep
+          </p>
+        </div>
+        <img
+          mat-card-image
+          class="cardImg"
+          src="../../../assets/measure-guide/step-2-insert-the-sensor.png"
+          alt="Step 2:"
+        />
+      </div>
+    </div>
+
+    <div class="swiper-slide">
+      <div
+        class="container"
+        fxLayout="column"
+        fxFlexFill
+        fxLayoutAlign="end center"
+      >
+        <div
+          class="container text-area sensor-text"
+          fxLayout="column"
+          fxFlexWrap
+          fxLayoutAlign="start center"
+        >
+          <p class="description" flex textWrap="false">Connect to Sensor</p>
+          <p class="description"></p>
+          <button
+            mat-flat-button
+            class="c-btn"
+            (click)="onSensorConnect('usb')"
+          >
+            <mat-icon>usb</mat-icon> Connect with USB
+          </button>
+          <button
+            mat-flat-button
+            class="c-btn"
+            (click)="onSensorConnect('ble')"
+          >
+            <mat-icon>bluetooth</mat-icon> Connect with Bluetooth
+          </button>
+        </div>
+        <img
+          mat-card-image
+          class="cardImg"
+          src="../../../assets/measure-guide/step-3-connect-the-sensor.png"
+          alt="Connect to Sensor"
+        />
+      </div>
+    </div>
+  </swiper>
+</div>
+
+<div
+  *ngIf="measureView == 'after-measuring' || measureView == 'measuring'"
+  fxLayout="column"
+  fxLayoutAlign="none center"
+>
+  <div fxFlex="30" class="spin-margin-padding">
+    <mat-progress-spinner
+      class="custom-spinner-sk"
+      [mode]="
+        measureView == 'after-measuring' ? 'determinate' : 'indeterminate'
+      "
+      diameter="150"
+      strokeWidth="8"
+      value="43"
+      style="position: relative; top: 150px; z-index: 10"
+    >
+    </mat-progress-spinner>
+    <mat-progress-spinner
+      class="custom-spinner-bg"
+      mode="determinate"
+      diameter="150"
+      strokeWidth="8"
+      value="100"
+    >
+    </mat-progress-spinner>
+  </div>
+
+  <div
+    fxFlexFill
+    fxLayout="column"
+    fxLayoutAlign="space-between center"
+    fxLayoutGap="10px"
+    class="measure-btn-margin-padding"
+  >
+    <div fxFlexFill fxLayout="row" fxLayoutAlign="center center">
+      <button
+        [disabled]="measureView == 'after-measuring' ? false : true"
+        fxFlex="70"
+        mat-flat-button
+        color="primary"
+        (click)="onMeasure()"
+      >
+        MEASURE AGAIN
+      </button>
+    </div>
+    <div fxFlexFill fxLayout="row" fxLayoutAlign="center center">
+      <button
+        [disabled]="measureView == 'after-measuring' ? false : true"
+        fxFlex="70"
+        mat-stroked-button
+        color="primary"
+        (click)="onGetAdvise()"
+      >
+        GET ADVICE
+      </button>
+    </div>
+  </div>
+  <div
+    fxFlexFill
+    fxLayout="column"
+    fxLayoutAlign="space-between center"
+    fxLayoutGap="4px"
+    style="position: relative; top: -220px; z-index: 12"
+  >
+    <label *ngIf="measureView == 'after-measuring'" fxFlex="10" class="mat-h5"
+      >SOIL MOISTURE</label
+    >
+    <p
+      *ngIf="measureView == 'after-measuring'"
+      fxFlex="10"
+      class="mat-display-1"
+    >
+      {{ soilData.soilMoisturePercentage }}%
+    </p>
+    <p *ngIf="measureView == 'measuring'" class="mat-h1">
+      {{ countdownSecond }}
+    </p>
+    <p *ngIf="measureView == 'measuring'">Reading...</p>
+  </div>
+</div>
+
+<mat-toolbar *ngIf="measureView == 'before-measuring'" class="toolbarNav">
+  <div
+    class="container"
+    fxLayout="row"
+    fxFlexFill
+    fxLayoutAlign="space-between center"
+  >
+    <button
+      [ngClass]="{ invisible: isFirstSlide }"
+      mat-icon-button
+      style="margin-right: 24px"
+    >
+      <mat-icon class="blue-icon" (click)="onSlideNav('back')"
+        >navigate_before</mat-icon
+      >
+      <span Class="tool-bar-text" (click)="onSlideNav('back')">BACK </span>
+    </button>
+
+    <app-slide-indicator
+      [current]="curIndex"
+      [length]="3"
+    ></app-slide-indicator>
+
+    <button
+      [ngClass]="{ invisible: isLastSlide }"
+      mat-icon-button
+      style="margin-right: 24px"
+    >
+      <span Class="tool-bar-text" (click)="onSlideNav('next')">NEXT</span>
+      <mat-icon class="blue-icon" (click)="onSlideNav('next')"
+        >navigate_next</mat-icon
+      >
+    </button>
+  </div>
+</mat-toolbar>
