--- a/liquid-prep-app/src/app/components/header-title/header-title.component.html
+++ b/liquid-prep-app/src/app/components/header-title/header-title.component.html
@@ -1,18 +1,11 @@
-<div class="header-title" style="overflow-x:hidden;" fxFlexFill cdkScrollable>
-    <mat-toolbar class="header-title-header mat-elevation-z4 custom-toolbar" >
-      <mat-toolbar-row style="padding: 0 5px;">
-        <button mat-icon-button class="toolbar-title" aria-label="Icon-button with close icon" >
-          <mat-icon>{{leftIconName}}</mat-icon>
-        </button>
-        <div style="padding:8px 0 0 10px; flex:1;">
-          <div class="mat-title toolbar-title" style="margin-bottom:2px;">{{headerTitle}}</div>
-        </div>
-        <button mat-icon-button class="toolbar-title" aria-label="Icon-button with search icon" >
-          <mat-icon>{{rightIconName}}</mat-icon>
-        </button>
-      </mat-toolbar-row>
-    </mat-toolbar>
-    </div>
-
-
+<mat-toolbar class="custom-toolbar">
+  <button mat-icon-button class="white-icon" aria-label="LeftButton" (click)="onClick('leftBtn')" >
+    <mat-icon>{{leftIconName}}</mat-icon>
+  </button>
+  <span class="toolbar-title">{{headerTitle}}</span>
+  <span class="toolbar-spacer"></span>
+  <button mat-icon-button class="white-icon" aria-label="RightButton" (click)="onClick('rightBtn')">
+    <mat-icon>{{rightIconName}}</mat-icon>
+  </button>
+</mat-toolbar>
     
