--- a/liquid-prep-app/src/app/components/my-crops/my-crops.component.html
+++ b/liquid-prep-app/src/app/components/my-crops/my-crops.component.html
@@ -1,6 +1,18 @@
+<div class="add-crop" style="overflow-x:hidden;" fxFlexFill cdkScrollable>
+  <mat-toolbar class="add-crop-header mat-elevation-z4 custom-toolbar">
+    <mat-toolbar-row style="padding: 0 5px;">
+      <button mat-icon-button class="toolbar-title" aria-label="Icon-button with close icon" (click)="backToMyCrops()">
+        <mat-icon>arrow_back</mat-icon>
+      </button>
+      <div style="padding:8px 0 0 10px; flex:1;">
+        <div class="mat-title toolbar-title" style="margin-bottom:2px;">My Crops</div>
+      </div>
+    </mat-toolbar-row>
+  </mat-toolbar>
+
 
 <div class="horizontal" style="margin-bottom: 8px">
-  <div class="toolbarTitle"> <b>Today, </b> {{  currentDate }}</div>
+  <!-- <div class="toolbarTitle"> <b>Today, </b> {{  currentDate }}</div> -->
   <div class="imgHolder" *ngIf="!todayWeather">
     <mat-icon class="vertical-align-middle primary-blue" *ngIf="loading">hourglass_empty</mat-icon>
     <div  *ngIf="!loading" (click)="showError(errorMessage)">
@@ -34,21 +46,37 @@
   </button>
 
 
-  <mat-grid-list class="grid" cols="2" rowHeight="1:1" gutterSize="2px" *ngIf="activeTab == tabs[0]">
-    <mat-grid-tile *ngFor="let crop of myCrops">
-      <mat-card class="card" style="padding: 0px">
-        <img mat-card-image class="cardImage" (click)="onViewCropAdvice(crop)" src="{{ crop.url }}" alt="{{ crop.cropName }}" />
-
+  <mat-grid-list class="grid" cols="1" rowHeight="120" gutterSize="25px" *ngIf="activeTab == tabs[0]">
+    <mat-grid-tile *ngFor="let crop of myCrops" class="shadow-box">
+      <mat-card class="card full-card">
+        <div class="cardDetails">
+          <div>
+            <span class="mat-h1">{{crop.cropName}}</span>
+          </div>
+          <div class="cropDates">
+            <span>Planted July 4 | Last Irrigated July 21</span>
+          </div>
+          <div>
+            <button class="measure-button" mat-icon-button (click)="onViewCropAdvice(crop)">
+              MEASURE
+            </button>
+            <button mat-icon-button (click)="onViewCropAdvice(crop)">
+              <mat-icon>edit</mat-icon>
+            </button>
+            <button mat-icon-button [matMenuTriggerFor]="menu">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </div>
+        </div>
+        <div class="cardImageHolder">
+          <img mat-card-image class="cardImage" src="{{ crop.url }}" alt="{{ crop.cropName }}" />
+        </div>
         <div fxLayout="row"
              fxFill
              fxLayoutGap="28px"
              fxLayoutAlign="space-between end"
              style="padding-left: 8px">
-          <p class="mat-subheader">{{crop.cropName}}</p>
-          <div >
-            <button mat-icon-button [matMenuTriggerFor]="menu">
-              <mat-icon>more_vert</mat-icon>
-            </button>
+          <div>
             <mat-menu #menu="matMenu">
               <button mat-menu-item (click)="onRemoveCrop(crop)">
                 <mat-icon>delete</mat-icon>
