--- a/liquid-prep-app/src/app/components/my-crops/my-crops.component.scss
+++ b/liquid-prep-app/src/app/components/my-crops/my-crops.component.scss
@@ -89,12 +89,53 @@ mat-card {
   border: 2px solid #F5F5F6;
 }
 
+.full-card {
+  width: 100%;
+  padding: 10px;
+}
+
 .cardImage {
   margin-bottom: 0px;
+  height: 100%;
+}
+
+.cardImageHolder {
+  width: 100px;
+  height: 100px;
+  border-radius: 6px;
+  overflow: hidden;
+  float: right;
+  margin: 12px 5px 0 0;
+}
+
+.cardDetails {
+  float: left;
 }
 
 .toolbarTitle {
   padding: 8px;
-  font-weight: 100;  
+  font-weight: 100;
   font-size: 20px;
+}
+
+.measure-button {
+  border: 1px solid #2F4FFE;
+  color: #2F4FFE;
+  border-radius: 3px;
+  padding: 0 10px;
+  height: 2em;
+  line-height: 2em;
+  width: auto;
+  display: inline-block;
+  margin-right: 10px;
+  letter-spacing: 2px;
+}
+
+.shadow-box {
+  box-shadow: -1px 2px 16px -2px rgba(0,0,0,0.5);
+  border-radius: 10px;
+}
+
+.cropDates {
+  margin: 5px 0;
 }
