View All crops module setup
Use camel case class names for consistency

Adding header title bar component

fix review comment #22

Adding seed-date component to test header-title

implement liquid-prep header

Add design fixes / Planted date

Style fixes

style fixes

Leave edit button as TODO until design is complete

--- a/liquid-prep-app/src/app/components/select-crop/select-crop.component.scss
+++ b/liquid-prep-app/src/app/components/select-crop/select-crop.component.scss
@@ -11,6 +11,10 @@ header {
     }
 }
 
+.button {
+  text-transform: uppercase;
+}
+
 .custom-toolbar {
   background-color: #2F4FFE;
   padding: 0 5px;
