--- a/liquid-prep-app/src/app/components/my-crops/my-crops.component.scss
+++ b/liquid-prep-app/src/app/components/my-crops/my-crops.component.scss
@@ -1,3 +1,11 @@
+.add-crop {
+  padding-bottom: 20px;
+}
+
+.add-crop-header {
+  margin-bottom: 13px;
+}
+
 .mainPage {
   background-color: #F5F5F6;
 }
@@ -89,12 +97,90 @@ mat-card {
   border: 2px solid #F5F5F6;
 }
 
+.mat-h1 {
+  font-weight: 500;
+  font-size: 1.25rem;
+}
+
+.full-card {
+  width: 100%;
+  padding: 6px 6px 5px 11px;
+}
+
 .cardImage {
-  margin-bottom: 0px;
+  margin: 0px !important;
+  height: 100%;
+}
+
+.cardImageHolder {
+  width: 95px;
+  height: 95px;
+  border-radius: 6px;
+  overflow: hidden;
+  float: right;
+  margin: 2px 1px 0 0;
+}
+
+.cardDetails {
+  float: left;
+  max-width: calc(100% - 100px);
 }
 
 .toolbarTitle {
   padding: 8px;
-  font-weight: 100;  
-  font-size: 20px;
+  font-weight: 100;
+  font-size: .8rem;
+}
+
+.measureButton {
+  border: 1px solid #2F4FFE;
+  color: #2F4FFE;
+  border-radius: 3px;
+  padding: 0 10px;
+  height: 2em;
+  line-height: 2em;
+  width: auto;
+  display: inline-block;
+  margin-right: 10px;
+  letter-spacing: 2px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: .75rem;
+
+  @media screen and (max-width: 339px) {
+    margin-right: 0;
+  }
+}
+
+.shadowBox {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 2px 2px 14px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+}
+
+.cropDates {
+  margin: 5px  0;
+  font-weight: 400;
+  font-size: .75rem;
+}
+
+.add-crop-button {
+  position: fixed;
+  text-align: center;
+  width: 275px;
+  height: 36px;
+  bottom: 10%;
+  left: calc(50% - (275px/2));
+  min-height: 36px;
+  border-radius: 4px;
+  button {
+    background-color: transparent;
+    border: 0;
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    font-family: 'IBM Plex Sans';
+    font-weight: 700;
+    font-size: 14px;
+    letter-spacing: 1.25px;
+  }
 }
