--- a/liquid-prep-app/src/app/components/my-crops/my-crops.component.scss
+++ b/liquid-prep-app/src/app/components/my-crops/my-crops.component.scss
@@ -118,7 +118,7 @@ mat-card {
   font-size: 20px;
 }
 
-.measure-button {
+.measureButton {
   border: 1px solid #2F4FFE;
   color: #2F4FFE;
   border-radius: 3px;
@@ -131,7 +131,7 @@ mat-card {
   letter-spacing: 2px;
 }
 
-.shadow-box {
+.shadowBox {
   box-shadow: -1px 2px 16px -2px rgba(0,0,0,0.5);
   border-radius: 10px;
 }
