add check for text

--- a/liquid-prep-app/src/app/components/my-crops/my-crops.component.html
+++ b/liquid-prep-app/src/app/components/my-crops/my-crops.component.html
@@ -67,7 +67,7 @@
      fxLayoutGap="25px"
      fxLayoutAlign="center center">
   <img src="assets/add-first-crop.png" alt="low-moisture" width="130" height="221">
-  <p class="mat-display-1">Add your first crop</p>
+  <p class="mat-display-1" id="addCrop">Add your first crop</p>
   <p class="mat-body-1">Select the crop for your watering advice!</p>
   <button mat-flat-button color="primary" style="width:33%" (click)="onAdd1stCrop()">ADD</button>
 </div>
