add additional tests

--- a/liquid-prep-app/src/app/components/seed-date/seed-date.component.html
+++ b/liquid-prep-app/src/app/components/seed-date/seed-date.component.html
@@ -5,7 +5,7 @@
         <mat-icon class="volume-icon">arrow_back</mat-icon>
       </button>
       <div style="padding:8px 0 0 10px; flex:1;">
-        <div class="mat-title toolbar-title" style="margin-bottom:2px;">Select Seed Date</div>
+        <div class="mat-title toolbar-title" id="selectSeedClass" style="margin-bottom:2px;">Select Seed Date</div>
       </div>
       <button mat-icon-button class="toolbar-title" aria-label="read text" (click)="volumeClicked()">
         <mat-icon>volume_up</mat-icon>
