--- a/liquid-prep-app/src/app/components/measure-soil/measure-soil.component.html
+++ b/liquid-prep-app/src/app/components/measure-soil/measure-soil.component.html
@@ -3,7 +3,7 @@
     <button mat-icon-button class="white-icon" aria-label="back clicked" (click)="backClicked()">
       <mat-icon class="volume-icon">arrow_back</mat-icon>
     </button>
-    <span class="toolbar-title">Measure Soil Moisture</span>
+    <span class="toolbar-title" id="measureSoilSpan">Measure Soil Moisture</span>
     <span class="toolbar-spacer"></span>
     <button mat-icon-button class="white-icon" aria-label="read text" (click)="volumeClicked()">
       <mat-icon>volume_up</mat-icon>
