--- a/liquid-prep-app/src/app/components/welcome/welcome.component.html
+++ b/liquid-prep-app/src/app/components/welcome/welcome.component.html
@@ -3,6 +3,9 @@
     <button mat-icon-button aria-label="read text" (click)="onGetStarted()">
       <span Class="tool-bar-text">SKIP</span>
     </button>
+    <button mat-icon-button class="white-icon" aria-label="read text" (click)="translate()">
+      <span Class="tool-bar-text">LANGUAGE</span>
+    </button>
   </div>
 </mat-toolbar>
 
