added button for translate

--- a/liquid-prep-app/src/app/components/my-crops/my-crops.component.html
+++ b/liquid-prep-app/src/app/components/my-crops/my-crops.component.html
@@ -26,7 +26,16 @@
     </div>
   </div>
 </div>
-
+<div class="select-language" fxLayoutAlign="center">
+  <button mat-button [matMenuTriggerFor]="menu">Select Language</button>
+  <mat-menu #menu="matMenu">
+    <button mat-menu-item (click)="translate('en-en')">English</button>
+    <button mat-menu-item (click)="translate('en-es')">Español</button>
+    <button mat-menu-item (click)="translate('en-fr')">Français</button>
+    <button mat-menu-item (click)="translate('en-ko')">한국어</button>
+    <button mat-menu-item (click)="translate('en-zh')">中国</button>
+  </mat-menu>
+</div>
 <div *ngIf="myCropStatus == 'crop-selected'">
 
   <button mat-mini-fab class="md-fab-bottom-right" (click)="fabClicked()">
