--- a/liquid-prep-app/src/app/components/select-crop/select-crop.component.html
+++ b/liquid-prep-app/src/app/components/select-crop/select-crop.component.html
@@ -23,6 +23,7 @@
     </mat-toolbar-row>
   </mat-toolbar>
 
+
   <mat-toolbar class="search-block mat-elevation-z4" [class.active]="toggleSearch">
     <mat-toolbar-row style="padding: 0 5px;">
       <button class="search-icon" mat-icon-button disabled>
@@ -35,9 +36,9 @@
     </mat-toolbar-row>
   </mat-toolbar>
 
-  <button mat-flat-button color="primary" (click)="translate()">LANGUAGE
-  </button>
-  
+  <!-- <button mat-flat-button color="primary" (click)="translate()">LANGUAGE
+  </button> -->
+
   <div *ngIf=cropsList>
     <mat-grid-list class="grid" cols="2" rowHeight="1:1"    gutterSize="2px">
       <mat-grid-tile *ngFor="let crop of filterFunction()">
@@ -56,3 +57,5 @@
       </mat-card>
   </div>
 </div>
+
+
