add unit tests and readme

--- a/liquid-prep-app/src/app/components/select-crop/select-crop.component.html
+++ b/liquid-prep-app/src/app/components/select-crop/select-crop.component.html
@@ -15,7 +15,7 @@
         <mat-icon>close</mat-icon>
       </button>
       <div style="padding:8px 0 0 10px; flex:1;">
-        <div class="mat-title toolbar-title" style="margin-bottom:2px;">Add a crop</div>
+        <div class="mat-title toolbar-title" id="addCropClass" style="margin-bottom:2px;">Add a crop</div>
       </div>
       <button mat-icon-button class="toolbar-title" aria-label="Icon-button with search icon"  (click)="openSearch()">
         <mat-icon>search</mat-icon>
