--- a/liquid-prep-app/src/app/components/my-crops/my-crops.component.scss
+++ b/liquid-prep-app/src/app/components/my-crops/my-crops.component.scss
@@ -99,11 +99,12 @@ mat-card {
 
 .mat-h1 {
   font-weight: 500;
+  font-size: 1.25rem;
 }
 
 .full-card {
   width: 100%;
-  padding: 6px 9px 5px 11px;
+  padding: 6px 6px 5px 11px;
 }
 
 .cardImage {
@@ -117,17 +118,18 @@ mat-card {
   border-radius: 6px;
   overflow: hidden;
   float: right;
-  margin: 0 1px 0 0;
+  margin: 10px 1px 0 0;
 }
 
 .cardDetails {
   float: left;
+  max-width: calc(100% - 100px);
 }
 
 .toolbarTitle {
   padding: 8px;
   font-weight: 100;
-  font-size: 20px;
+  font-size: .8rem;
 }
 
 .measureButton {
@@ -141,6 +143,13 @@ mat-card {
   display: inline-block;
   margin-right: 10px;
   letter-spacing: 2px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: .75rem;
+
+  @media screen and (max-width: 339px) {
+    margin-right: 0;
+  }
 }
 
 .shadowBox {
@@ -150,6 +159,8 @@ mat-card {
 
 .cropDates {
   margin: 5px  0;
+  font-weight: 400;
+  font-size: .75rem;
 }
 
 .add-crop-button {
